feat: upgrade the credential refresh mechanism and add fallbacks for error scenarios